@@ -1,5 +1,6 @@
 Version 2.03.02 - 
 ===================================
+  Add synchronization with udev before removing cached devices.
   Add support for caching VDO LVs and VDOPOOL LVs.
   Add support for vgsplit with cached devices.
   Query mpath device only once per command for its state.
